# Precosquin-frontend

./: .gitignore  EPICAS_PRECOSQUIN.md  README.md  docker-compose.yml  netlify.toml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py  news.json
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  artists.py  auth.py  categories.py  contracts.py  dashboard.py  inscriptions.py  jury.py  news.py  notifications.py  reports.py  schedule.py  staff.py  storage.py
backend/app/core/: config.py  deps.py  middleware.py
backend/app/db/: session.py
frontend/: .env.example  Dockerfile  angular.json  netlify.toml  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/core/auth/: auth.guard.ts  auth.service.ts  public.guard.ts
frontend/src/app/core/http/: error.interceptor.ts  retry.interceptor.ts  token.interceptor.ts
frontend/src/app/core/services/: inscriptions.service.ts  theme.service.ts
frontend/src/app/core/state/: organization.store.ts  user.store.ts
frontend/src/app/features/admin/: admin.page.ts  admin.routes.ts
frontend/src/app/features/artistas/: artistas-list.page.ts  artistas.routes.ts
frontend/src/environments/: environment.production.ts  environment.staging.ts  environment.ts
supabase/migrations/: 001_initial_schema.sql  002_storage_buckets.sql
(+41 files in other folders)
